--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,7 +3,7 @@ version: 0.2
 phases:
   pre_build:
     commands:
-      - $(aws ecr get-login-password)
+      - $(aws ecr get-login-password --region eu-central-1 | docker login --username AWS --password-stdin 904356693277.dkr.ecr.eu-central-1.amazonaws.com)
       - TAG="$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)"
   build:
     commands:
