Try tag differently

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,12 +4,12 @@ phases:
   pre_build:
     commands:
       - $(aws ecr get-login --no-include-email --region eu-central-1)
-      - TAG="$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)"
+      - TAG="latest"  #"$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)"
   build:
     commands:
       - echo Build started on `date`
       - echo Building the Docker image...
-      - docker build --tag "${REPOSITORY}:latest" .
+      - docker build --tag "${REPOSITORY}:${TAG}" .
      #- docker tag $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG
       
   post_build:
