Added Container Name

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -18,7 +18,7 @@ phases:
       - docker tag banana:latest 904356693277.dkr.ecr.eu-central-1.amazonaws.com/faultybanana:latest  
       - docker push 904356693277.dkr.ecr.eu-central-1.amazonaws.com/faultybanana:latest
       # - docker push "${REPOSITORY}:${TAG}"  
-      - printf '[{"name":"BananaTask","imageUri":"%s"}]' $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG > imagedefinitions.json
+      - printf '[{"name":"BananaContainer","imageUri":"%s"}]' $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG > imagedefinitions.json
       - printf '{"Image":"%s:%s"}' $REPOSITORY $TAG > build.json
 artifacts:
   files: 
