--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
-    "mongodb": "^3.6.2"
+    "joi": "^17.3.0",
+    "mongodb": "^3.6.2",
+    "mongoose": "^5.10.10"
   },
   "devDependencies": {},
   "scripts": {
